@@ -73,7 +73,7 @@ public class ConceptService {
         concept.setCodeSystem(value.getCodeSystem());
       });
     });
-    codeSystemEntityService.batchSave(concepts.stream().map(c -> (CodeSystemEntity) c).collect(Collectors.toList()), codeSystem);
+    codeSystemEntityService.batchSave(concepts.stream().map(c -> (CodeSystemEntity) c).toList(), codeSystem);
     repository.batchUpsert(concepts);
     return concepts;
   }
@@ -273,8 +273,8 @@ public class ConceptService {
             version.setId(null);
             version.setStatus(PublicationStatus.draft);
             version.setCreated(null);
-            version.setDesignations(version.getDesignations().stream().peek(d -> d.setId(null)).collect(Collectors.toList()));
-            version.setAssociations(version.getAssociations().stream().peek(a -> a.setId(null)).collect(Collectors.toList()));
+            version.setDesignations(version.getDesignations().stream().peek(d -> d.setId(null)).toList());
+            version.setAssociations(version.getAssociations().stream().peek(a -> a.setId(null)).toList());
           }
           version.setPropertyValues(propertyValues);
           return Pair.of(c.getId(), version);
