@@ -56,7 +56,7 @@ public class ValueSetRelatedArtifactService extends RelatedArtifactService {
             return new RelatedArtifact().setId(r.getValueSet()).setType(RelatedArtifactType.vs);
           }
           return null;
-        }).filter(Objects::nonNull).filter(distinctByKey(ra -> ra.getType() + ra.getId())).collect(Collectors.toList());
+        }).filter(Objects::nonNull).filter(distinctByKey(ra -> ra.getType() + ra.getId())).toList();
   }
 
 
@@ -67,7 +67,7 @@ public class ValueSetRelatedArtifactService extends RelatedArtifactService {
     Map<Long, String> spaces = spaceService.query(new SpaceQueryParams().setIds(spaceIds).limit(spaceIds.split(",").length))
         .getData().stream().collect(Collectors.toMap(Space::getId, Space::getCode));
 
-    return pages.stream().map(p -> new RelatedArtifact().setId(spaces.get(p.getSpaceId()) + "|" + p.getSlug()).setType(RelatedArtifactType.p)).collect(Collectors.toList());
+    return pages.stream().map(p -> new RelatedArtifact().setId(spaces.get(p.getSpaceId()) + "|" + p.getSlug()).setType(RelatedArtifactType.p)).toList();
   }
 
   private List<RelatedArtifact> findSpaces(String id) {
