@@ -126,7 +126,7 @@ public class UcumMapper {
       designation.setCaseSignificance(CaseSignificance.entire_term_case_insensitive);
       designation.setStatus(PublicationStatus.active);
       return designation;
-    }).collect(Collectors.toList());
+    }).toList();
   }
 
 }
